ops/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-go-chatroom-svc
  labels:
    app: backend
spec:
  ports:
    - port: 8000
      targetPort: 8888
      protocol: TCP
      name: grpc
  selector:
    app: chatroom
