ops/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chatroom-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 8000
        name: grpc
        protocol: GRPC
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chatroom
spec:
  hosts:
    - "*"
  gateways:
    - chatroom-gateway
  http:
  - match:
    - prefix: /
    route:
      - destination:
          host: grpc-go-chatroom-svc.default.svc.cluster.local
          port:
            number: 8000
            name: grpc
